k8s-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-app-deployment
  labels:
    app: your-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: your-app
  template:
    metadata:
      labels:
        app: your-app
    spec:
      containers:
      - name: your-app
        image: 499756076901.dkr.ecr.us-east-1.amazonaws.com/demoapp:latest    # ${DOCKER_IMAGE}:${env.BUILD_ID}
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 1


        # securityContext:
        #   runAsNonRoot: true
        #   runAsUser: 1000
        #   readOnlyRootFilesystem: true
        #   capabilities:
        #     drop:
        #     - ALL
        # volumeMounts:
        # - mountPath: "/data"
        #   name: azure-storage
      # securityContext:
      #   fsGroup: 2000
      # volumes:
      # - name: azure-storage
      #   persistentVolumeClaim:
      #     claimName: azure-pvc
